--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Taviraj:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Khula:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
-
-
 
 body {
     background: #e5e5e5;
@@ -11,9 +5,16 @@ body {
     margin: 0;
 }
 
+button, 
+button:active, 
+button:focus {
+    outline: none;
+}
+
 
 
 header {
+    position: relative;
     float: right;
     margin-right: 150px;
 }
@@ -32,6 +33,7 @@ header {
   float: left;
   margin-left: 150px;
   margin-top: 15px;
+  position: relative;
 }
 
 .logo img{
@@ -69,14 +71,14 @@ header {
 
 .head_text {
     width: 1200px;
-    height: 400px;
-    padding-top: 0px;
-    position: absolute;
+    height: 100px;
+    padding-top: 530px;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
-    font-family: Anton;
+    font-family: "Anton", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 100px;
@@ -85,3 +87,276 @@ header {
     letter-spacing: 0.08em;
     color: #000000;
 }
+
+
+
+.blocks-course-level  {
+    padding-top: 0px;
+    position: relative;
+    margin-left: 16.5%;
+}
+
+.level-course-p {
+    font-family: 'Khula', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 35px;
+    line-height: 47px;
+    text-align: center;
+    letter-spacing: 0.08em;
+    color: #F7DE1F;
+}
+
+.blocks-course-level > div  {
+    background: rgba(29, 41, 115, 0.85);
+    box-shadow: 3px 4px 4px rgba(23, 34, 99, 0.25);
+    border-radius: 40px;
+    width: 285px;
+    height: 330px;
+    float: left;
+    margin: 0 4.5%;
+}
+
+.blocks-course-level > div > button {
+    width: 75%;
+    margin-top: 43%;
+    margin-left: 13%;
+}
+
+.blocks-course-level-btn {
+    background: #F7DE1F;
+    box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
+    border-radius: 40px;
+    display: grid;
+}
+
+.blocks-course-level-p {
+    font-family: 'Khula', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 32px;
+    text-align: center;
+    letter-spacing: 0.08em; 
+}
+
+.blocks-course-level > div > a {
+    text-decoration: none;
+}
+
+.blocks-course-level > div > a > p {
+    font-family: 'Khula', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 32px;
+    text-align: center;
+    letter-spacing: 0.08em;
+    color: #F5FAFF;
+    margin-top: 8px;
+}
+
+
+
+.head-course-cor {
+    position: absolute;
+    width: 844px;
+    height: 50px;
+    margin-top: 380px;
+    margin-left: 150px;
+    float: left;
+}
+
+.head-course-cor > p {
+    font-family: 'Taviraj', serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 55px;
+    line-height: 94px;
+    letter-spacing: 0.08em;
+}
+
+.img-course-cor {
+    margin-top: 440px;
+    padding-left: 41%;
+    position: absolute;
+    width: 500px;
+    height: 500px;
+}
+
+.img-course-cor > img {
+  
+}
+
+.head-course-cor-details {
+    width: 508px;
+    height: 50px;
+    position: relative;
+    margin-top: 680px;
+    padding-left: 150px;
+    /* float: left; */
+}
+
+.head-course-cor-details > p {
+    font-family: 'Khula', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 54px;
+    letter-spacing: 0.08em;
+}
+
+
+
+.prob-lesson-div {
+    position: relative;
+    width: 220px;
+    height: 220px;
+    background: rgba(29, 41, 115, 0.85);
+    border-radius: 40px;
+    margin-left: 245px;
+    margin-top: 15%;
+}
+
+.prob-lesson {
+    padding-top: 12px;
+    font-family: 'Khula', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 0.08em;
+    color: #F7DE1F;
+}
+
+.btn-prob-lesson {
+    background: #F7DE1F;
+    border-radius: 40px;
+    width: 70%;
+    height: 25%;
+    margin-top: 19%;
+    margin-left: 15%;
+}
+
+.p-prob-lesson {
+    font-family: 'Khula', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.08em;
+    color: #000000;
+}
+
+
+
+.div-btn-other-course {
+    margin-top: 140px;
+    margin-left: 40%;
+}
+
+.div-btn-other-course > button {
+    width: 35%;
+    height: 75px;
+    background: #F7DE1F;
+    box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
+    border-radius: 40px;
+}
+
+.div-btn-other-course > button > p {
+    font-family: 'Khula', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 33px;
+    line-height: 56px;
+    letter-spacing: 0.08em;
+    margin-top: 10px;
+    margin-left: 8px;
+}
+
+
+.body-course-cor {
+    position: relative;
+    width: 600px;
+    height: 108px;
+    margin-top: 200px;
+    margin-left: 150px;
+    float: left;
+}
+
+.body-course-cor > p {
+    font-family: 'Khula', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 54px;
+    letter-spacing: 0.08em;
+    color: #000000;
+}
+
+.body-img-statue-of-liberty {
+    margin-left: 150px;
+}
+
+
+
+
+footer {
+    margin-top: 3000px;
+    width: 100%;
+    height: 300px;
+    float: left;
+    background: rgba(247, 222, 31, 0.6);
+    box-shadow: 2px -2px 4px rgba(189, 169, 14, 0.25);
+    border-radius: 40px 40px 0px 0px;
+}
+
+.logo-fut {
+    height: 125px;
+    width: 236px;
+    padding-left: 150px;
+    padding-top: 90px;
+}
+
+footer > ul {
+    float: right;
+    list-style: none;
+    font-family: 'Khula', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 38px;
+    letter-spacing: 0.08em;
+}
+
+footer > ul > li {
+    padding-top: 35px;
+    padding-right: 150px;
+}
+
+footer > ul > li > a {
+    text-decoration: none;
+    color: #000000;
+}
+
+.footer-social-icons {
+    position: absolute;
+    padding-left: 390px;
+    padding-top: 38px;
+}
+
+.footer-social-icons > ul {
+    list-style: none;
+}
+
+.footer-social-icons > ul > li > a > img {
+    width: 80%;
+    height: 80%;
+    transition: 0.3s ease-in-out;
+}
+
+.footer-social-icons > ul > li > a > img:hover {
+    transform: scale(1.15);
+}   
