--- a/css/teacher.css
+++ b/css/teacher.css
@@ -11,6 +11,8 @@ button:focus {
     outline: none;
 }
 
+
+
 .kate-img > img {
     width: 95%;
     height: 95%;
@@ -20,7 +22,6 @@ button:focus {
     width: 33.5%;
     height: 33.5%;
 }
-
 
 
 
@@ -252,6 +253,46 @@ header {
     letter-spacing: 0.08em;
     color: #1D2973;
     margin-top: 3%;
+}
+
+
+
+#button {
+  display: inline-block;
+  background-color: rgb(226, 208, 74);
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 4px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  transition: background-color .3s, 
+    opacity .5s, visibility .5s;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 1000;
+}
+
+#button::after {
+  content: "\f077";
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 2em;
+  line-height: 50px;
+  color: #fff;
+}
+#button:hover {
+  cursor: pointer;
+  background-color: #333;
+}
+#button:active {
+  background-color: #555;
+}
+#button.show {
+  opacity: 1;
+  visibility: visible;
 }
 
 
