--- a/css/english-level.css
+++ b/css/english-level.css
@@ -5,6 +5,8 @@ body {
     margin: 0;
 }
 
+
+
 button, 
 button:active, 
 button:focus {
@@ -64,159 +66,178 @@ header {
 
 
 
-.header-text {
-    position: absolute;
-    width: 100%;
-    height: 150px;
-    margin-top: 230px;
+.head_text {
+    float: right;
+    margin-right: 300px;
+    margin-top: 100px;
+}
+
+.head_text > p {
     font-family: "Anton", sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 100px;
-    line-height: 147px;
-    text-align: center;
+    font-size: 95px;
+    line-height: 139px;
     letter-spacing: 0.08em;
+}
+
+.bridge {
+    float: left;
+    margin-left: 150px;
+    margin-top: 115px;
 }
 
 
 
-.english-cor {
+.prob-lesson-div {
+    float: right;
+    width: 220px;
+    height: 220px;
+    background: rgba(29, 41, 115, 0.85);
+    border-radius: 40px;
+    margin-right: 230px;
+    margin-top: 110px;
+}
+
+.prob-lesson {
+    padding-top: 0px;
+    font-family: 'Khula', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 0.08em;
+    color: #F7DE1F;
+}
+
+.btn-prob-lesson {
+    background: #F7DE1F;
+    border-radius: 40px;
+    width: 70%;
+    height: 25%;
+    margin-top: 10%;
+    margin-left: 17%;
+}
+
+.p-prob-lesson {
+    font-family: 'Khula', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.08em;
+    color: #000000;
+}
+
+
+
+
+.opis-text {
+    width: 550px;
+    float: left;
+    margin-left: 150px;
+    margin-top: 175px;
+}
+
+.opis-text > p {
+    font-family: 'Khula', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 43px;
+    letter-spacing: 0.08em;
+}
+
+.bus {
+    float: right;
+    margin-right: 150px;
+    margin-top: 150px;
+}
+
+.opis-lesson-div {
+    float: left;
+    width: 220px;
+    height: 220px;
+    background: rgba(29, 41, 115, 0.85);
+    border-radius: 40px;
+    margin-left: 270px;
+    margin-top: 60px;
+}
+
+
+
+.add-text {
+    width: 700px;
+    position: absolute;
+    margin-left: 57.5%;
+    margin-top: 1805px;
+}
+
+.add-text > p {
+    font-family: 'Khula', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 43px;
+    letter-spacing: 0.08em;
+}
+
+.under {
+    float: left;
+    margin-left: 150px;
+    margin-top: 210px;
+}
+
+
+
+.foot-text {
+    width: 600px;
+    float: left;
+    margin-left: -840px;
+    margin-top: 1030px;
+}
+
+.foot-text > p {
+    font-family: 'Khula', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 43px;
+    letter-spacing: 0.08em;
+}
+
+.big-ben {
+    float: right;
+    margin-right: 150px;
+    margin-top: 950px;
+}
+
+.foot-lesson-div {
+    float: left;
+    width: 220px;
+    height: 220px;
+    background: rgba(29, 41, 115, 0.85);
+    border-radius: 40px;
+    margin-left: 500px;
+    margin-top: 460px;
+}
+
+
+
+.busines-english {
     width: 750px;
     height: 350px;
-    position: absolute;
     text-align: center;
     float: left;
-    margin-top: 520px;
+    margin-top: 250px;
     margin-left: 150px;
     background: rgba(29, 41, 115, 0.85);
     border-radius: 40px;
 }
 
-.english-cor > p {
-    margin-top: 30px;
-    font-family: 'Khula', sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 50px;
-    line-height: 58px;
-    letter-spacing: 0.08em;
-    color: #F7DE1F;
-}
-
-.english-cor > button {
-    width: 60%;
-    height: 70px;
-    margin-top: 3.5%;
-    margin-left: 0%;
-    background: #F7DE1F;
-    border-radius: 40px;
-}
-
-.english-cor > button > p {
-    font-family: 'Khula', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 25px;
-    line-height: 40px;
-    text-align: center;
-    letter-spacing: 0.08em;
-    color: #1D2973;
-    margin-top: 4%;
-}
-
-.english-cor > a {
-    text-decoration: none;
-    color: #F7DE1F;
-}
-
-.english-cor > a > p {
-    margin-top: 13px;
-    font-family: 'Khula', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 22px;
-    line-height: 30px;
-    text-align: center;
-    letter-spacing: 0.08em;
-}
-
-
-
-.total-english {
-    width: 750px;
-    height: 350px;
-    position: absolute;
-    text-align: center;
-    float: left;
-    margin-top: 920px;
-    margin-left: 1010px;
-    background: #F7DE1F;
-    border-radius: 40px;
-}
-
-.total-english > p {
-    margin-top: 30px;
-    font-family: 'Khula', sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 50px;
-    line-height: 58px;
-    letter-spacing: 0.08em;
-    color: #1D2973;
-}
-
-.total-english > button {
-    width: 60%;
-    height: 80px;
-    margin-top: 11%;
-    margin-left: 0%;
-    background: #1D2973;
-    border-radius: 40px;
-}
-
-.total-english > button > p {
-    font-family: 'Khula', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 25px;
-    line-height: 40px;
-    text-align: center;
-    letter-spacing: 0.08em;
-    color: #F7DE1F;
-    margin-top: 4%;
-}
-
-.total-english > a {
-    text-decoration: none;
-    color: #1D2973;
-}
-
-.total-english > a > p {
-    margin-top: 12px;
-    font-family: 'Khula', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 22px;
-    line-height: 30px;
-    text-align: center;
-    letter-spacing: 0.08em;
-}
-
-
-
-.english-for-work {
-    width: 750px;
-    height: 350px;
-    position: absolute;
-    text-align: center;
-    float: left;
-    margin-top: 1320px;
-    margin-left: 150px;
-    background: rgba(29, 41, 115, 0.85);
-    border-radius: 40px;
-}
-
-.english-for-work > p {
+.busines-english > p {
     width: 500px;
     margin-top: 30px;
     margin-left: 15%;
@@ -229,7 +250,7 @@ header {
     color: #F7DE1F;
 }
 
-.english-for-work > button {
+.busines-english > button {
     width: 60%;
     height: 70px;
     margin-top: 3.5%;
@@ -238,7 +259,7 @@ header {
     border-radius: 40px;
 }
 
-.english-for-work > button > p {
+.busines-english > button > p {
     font-family: 'Khula', sans-serif;
     font-style: normal;
     font-weight: 300;
@@ -250,12 +271,12 @@ header {
     margin-top: 4%;
 }
 
-.english-for-work > a {
+.busines-english > a {
     text-decoration: none;
     color: #F7DE1F;
 }
 
-.english-for-work > a > p {
+.busines-english > a > p {
     margin-top: 13px;
     font-family: 'Khula', sans-serif;
     font-style: normal;
@@ -266,83 +287,18 @@ header {
     letter-spacing: 0.08em;
 }
 
-
-
-.business-english {
+.obsh-english {
     width: 750px;
     height: 350px;
-    position: absolute;
     text-align: center;
-    float: left;
-    margin-top: 1720px;
-    margin-left: 1010px;
-    background: #F7DE1F;
-    border-radius: 40px;
-}
-
-.business-english > p {
-    margin-top: 30px;
-    font-family: 'Khula', sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 50px;
-    line-height: 58px;
-    letter-spacing: 0.08em;
-    color: #1D2973;
-}
-
-.business-english > button {
-    width: 60%;
-    height: 80px;
-    margin-top: 11%;
-    margin-left: 0%;
-    background: #1D2973;
-    border-radius: 40px;
-}
-
-.business-english > button > p {
-    font-family: 'Khula', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 25px;
-    line-height: 40px;
-    text-align: center;
-    letter-spacing: 0.08em;
-    color: #F7DE1F;
-    margin-top: 4%;
-}
-
-.business-english > a {
-    text-decoration: none;
-    color: #1D2973;
-}
-
-.business-english > a > p {
-    margin-top: 12px;
-    font-family: 'Khula', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 22px;
-    line-height: 30px;
-    text-align: center;
-    letter-spacing: 0.08em;
-}
-
-
-
-.interview-in-english {
-    width: 750px;
-    height: 350px;
-    position: absolute;
-    text-align: center;
-    float: left;
-    margin-top: 2120px;
-    margin-left: 150px;
+    float: right;
+    margin-top: 232px;
+    margin-right: 150px;
     background: rgba(29, 41, 115, 0.85);
     border-radius: 40px;
 }
 
-.interview-in-english > p {
+.obsh-english > p {
     width: 500px;
     margin-top: 30px;
     margin-left: 15%;
@@ -355,7 +311,7 @@ header {
     color: #F7DE1F;
 }
 
-.interview-in-english > button {
+.obsh-english > button {
     width: 60%;
     height: 70px;
     margin-top: 3.5%;
@@ -364,7 +320,7 @@ header {
     border-radius: 40px;
 }
 
-.interview-in-english > button > p {
+.obsh-english > button > p {
     font-family: 'Khula', sans-serif;
     font-style: normal;
     font-weight: 300;
@@ -376,12 +332,12 @@ header {
     margin-top: 4%;
 }
 
-.interview-in-english > a {
+.obsh-english > a {
     text-decoration: none;
     color: #F7DE1F;
 }
 
-.interview-in-english > a > p {
+.obsh-english > a > p {
     margin-top: 13px;
     font-family: 'Khula', sans-serif;
     font-style: normal;
@@ -391,6 +347,7 @@ header {
     text-align: center;
     letter-spacing: 0.08em;
 }
+
 
 
 
@@ -438,7 +395,7 @@ header {
 
 
 footer {
-    margin-top: 2550px;
+    margin-top: 200px;
     width: 100%;
     height: 300px;
     float: left;
@@ -446,7 +403,6 @@ footer {
     box-shadow: 2px -2px 4px rgba(189, 169, 14, 0.25);
     border-radius: 40px 40px 0px 0px;
     position: relative;
-    min-height: 100%;
 }
 
 .logo-fut {
@@ -512,3 +468,4 @@ footer > ul > li > a {
 .social-list:hover:after {
 	width: 100%;
 }
+
