--- a/css/modals-page.css
+++ b/css/modals-page.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(23, 34, 99, 0.3);;
+  background-color: rgba(23, 34, 99, 0.3);
 }
 
 .modal-content {
@@ -92,3 +92,4 @@
   letter-spacing: 0.05em;
   color: #1D2973;
 }
+
