--- a/css/teacher.css
+++ b/css/teacher.css
@@ -3,6 +3,9 @@ body {
     background: #e5e5e5;
     padding: 0;
     margin: 0;
+    width: 100%;
+    min-width: 1900px;
+    max-width: 1920px;
 }
 
 button, 
