--- a/css/home-page.css
+++ b/css/home-page.css
@@ -1,4 +1,3 @@
-
 body {
     width: 100%;
     min-width: 1900px;
@@ -31,7 +30,8 @@ header {
     width: 987px;
     height: 64px;
     background: rgba(46, 67, 196, 0.12);
-    box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.05);
+    -webkit-box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.05);
+            box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.05);
     border-radius: 40px;
     margin-top: 25px;
     margin-right: 140px;
@@ -115,7 +115,8 @@ nav > a:hover {
 
 .blocks-course-level > div  {
     background: rgba(29, 41, 115, 0.85);
-    box-shadow: 3px 4px 4px rgba(23, 34, 99, 0.25);
+    -webkit-box-shadow: 3px 4px 4px rgba(23, 34, 99, 0.25);
+            box-shadow: 3px 4px 4px rgba(23, 34, 99, 0.25);
     border-radius: 40px;
     width: 285px;
     height: 330px;
@@ -131,8 +132,10 @@ nav > a:hover {
 
 .blocks-course-level-btn {
     background: #F7DE1F;
-    box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
+    -webkit-box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
+            box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
     border-radius: 40px;
+    display: -ms-grid;
     display: grid;
 }
 
@@ -266,7 +269,8 @@ nav > a:hover {
     width: 35%;
     height: 75px;
     background: #F7DE1F;
-    box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
+    -webkit-box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
+            box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
     border-radius: 40px;
 }
 
@@ -445,7 +449,8 @@ nav > a:hover {
     margin-right: 150px;
     height: 500px;
     background: rgba(247, 222, 31, 0.6);
-    box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
+    -webkit-box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
+            box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
     border-radius: 40px;
 
 }
@@ -470,7 +475,8 @@ nav > a:hover {
     margin-left: 135px;
     margin-top: -20px;
     background: rgba(29, 41, 115, 0.85);
-    box-shadow: 3px 4px 4px rgba(23, 34, 99, 0.25);
+    -webkit-box-shadow: 3px 4px 4px rgba(23, 34, 99, 0.25);
+            box-shadow: 3px 4px 4px rgba(23, 34, 99, 0.25);
     border-radius: 40px;
 }
 
@@ -481,7 +487,8 @@ nav > a:hover {
     margin-right: 135px;
     margin-top: -150px;
     background: rgba(29, 41, 115, 0.85);
-    box-shadow: 3px 4px 4px rgba(23, 34, 99, 0.25);
+    -webkit-box-shadow: 3px 4px 4px rgba(23, 34, 99, 0.25);
+            box-shadow: 3px 4px 4px rgba(23, 34, 99, 0.25);
     border-radius: 40px;
     z-index: 2;
 }
@@ -516,7 +523,8 @@ nav > a:hover {
     margin-left: 22.5%;
     margin-top: -2.5%;
     background: #F7DE1F;
-    box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
+    -webkit-box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
+            box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
     border-radius: 40px;
 }
 
@@ -537,7 +545,8 @@ nav > a:hover {
     width: 805px;
     height: 520px;
     background: rgba(29, 41, 115, 0.9);
-    box-shadow: 3px 4px 4px rgba(23, 34, 99, 0.25);
+    -webkit-box-shadow: 3px 4px 4px rgba(23, 34, 99, 0.25);
+            box-shadow: 3px 4px 4px rgba(23, 34, 99, 0.25);
     border-radius: 40px;
     margin-top: 560px;
     margin-right: 150px;
@@ -559,7 +568,8 @@ nav > a:hover {
 }
 
 .maps-footer {
-    box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 40px;
     width: 700px;
     height: 100px;
@@ -579,6 +589,10 @@ nav > a:hover {
   position: fixed;
   bottom: 30px;
   right: 30px;
+  -webkit-transition: background-color .3s, 
+    opacity .5s, visibility .5s;
+  -o-transition: background-color .3s, 
+    opacity .5s, visibility .5s;
   transition: background-color .3s, 
     opacity .5s, visibility .5s;
   opacity: 0;
@@ -618,7 +632,8 @@ footer {
     height: 300px;
     float: left;
     background: rgba(247, 222, 31, 0.6);
-    box-shadow: 2px -2px 4px rgba(189, 169, 14, 0.25);
+    -webkit-box-shadow: 2px -2px 4px rgba(189, 169, 14, 0.25);
+            box-shadow: 2px -2px 4px rgba(189, 169, 14, 0.25);
     border-radius: 40px 40px 0px 0px;
     position: relative;
 }
@@ -665,11 +680,15 @@ footer > ul > li > a {
 .footer-social-icons > ul > li > a > img {
     width: 80%;
     height: 80%;
+    -webkit-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
     transition: 0.3s ease-in-out;
 }
 
 .footer-social-icons > ul > li > a > img:hover {
-    transform: scale(1.15);
+    -webkit-transform: scale(1.15);
+        -ms-transform: scale(1.15);
+            transform: scale(1.15);
 }
 
 .social-list:after {
@@ -680,13 +699,11 @@ footer > ul > li > a {
 	height: 4px; 
 	background-color: #000000; 
 	content: "";
+	-webkit-transition: width 0.4s ease-out;
+	-o-transition: width 0.4s ease-out;
 	transition: width 0.4s ease-out; 
 }
 
 .social-list:hover:after {
 	width: 100%;
 }
-
-
-
-
