--- a/css/modals-page.css
+++ b/css/modals-page.css
@@ -1,5 +1,3 @@
-
-
 .myModal {
   min-width: 1900px;
   max-width: 1920px;
@@ -16,7 +14,8 @@
 
 .modal-content {
   background: rgba(29, 41, 115, 0.9);
-  box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
   margin: 10% auto;
   padding: 20px;
   border: 1px solid #888;
@@ -53,7 +52,8 @@
 
 .form-modal {
   background: rgba(247, 222, 31, 0.85);
-  box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
+  -webkit-box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
+          box-shadow: 3px 4px 4px rgba(189, 169, 14, 0.25);
   border-radius: 40px;
   margin-top: -5%;
   margin-left: 2.6%;
@@ -96,4 +96,3 @@
   letter-spacing: 0.05em;
   color: #1D2973;
 }
-
