--- a/css/allcourse-2.css
+++ b/css/allcourse-2.css
@@ -1,3 +1,7 @@
+* {
+    padding: 0;
+    margin: 0;
+}
 
 body {
     width: 100%;
@@ -7,8 +11,6 @@ body {
 
 body {
     background: #e5e5e5;
-    padding: 0;
-    margin: 0;
 }
 
 
