--- a/css/home-page.css
+++ b/css/home-page.css
@@ -1,14 +1,9 @@
-body {
-    width: 100%;
-    min-width: 1900px;
-    max-width: 1920px;
-}
-
 
 body {
     background: #e5e5e5;
     padding: 0;
     margin: 0;
+    min-width: 1700px;
 }
 
 
@@ -576,7 +571,7 @@ nav > a:hover {
     z-index: 1;
     margin-left: 150px;
     margin-top: 150px;
-    position: relative;
+    position: absolute;
 }
 
 #button {
