--- a/css/teacher-adults.css
+++ b/css/teacher-adults.css
@@ -1,19 +1,10 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v7.0.29,
-* Autoprefixer: v9.7.6
-* Browsers: last 10 version
-*/
-
-
 
 body {
     background: #e5e5e5;
     padding: 0;
     margin: 0;
     width: 100%;
-    min-width: 1900px;
-    max-width: 1920px;
+    min-width: 1700px;
 }
 
 button, 
@@ -108,6 +99,7 @@ header {
     width: 100%;
     height: 150px;
     margin-top: 230px;
+    margin: 230px auto;
     font-family: "Anton", sans-serif;
     font-style: normal;
     font-weight: normal;
