--- a/css/home-page.css
+++ b/css/home-page.css
@@ -3,7 +3,7 @@ body {
     background: #e5e5e5;
     padding: 0;
     margin: 0;
-    min-width: 1700px;
+    min-width: 1900px;
 }
 
 
@@ -22,7 +22,7 @@ header {
 
 .inner-width {
     float: right;
-    width: 987px;
+    width: 950px;
     height: 64px;
     background: rgba(46, 67, 196, 0.12);
     -webkit-box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.05);
@@ -47,7 +47,7 @@ header {
 }
 
 .navigation-menu{
-    display: inline-block;
+    
     margin: 14.5px;
 }
 
@@ -59,10 +59,9 @@ header {
     padding-right: 23px;
     text-decoration: none;
     font-family: 'Khula', sans-serif;
-    font-style: normal;
     font-size: 22px;
     line-height: 40px;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.1em;
     color: #000000;
 }
 
@@ -622,6 +621,7 @@ nav > a:hover {
 
 
 footer {
+    margin: 0 auto;
     margin-top: 150px;
     width: 100%;
     height: 300px;
