--- a/css/home-page.css
+++ b/css/home-page.css
@@ -48,20 +48,20 @@ header {
 
 .navigation-menu{
     
-    margin: 14.5px;
+    margin: 13.5px;
+    margin-left: 15px;
 }
 
 .navigation-menu a{
-    position: relative;
-    padding-top: 22px;
-    padding-bottom: 18px;
-    padding-left: 27px;
-    padding-right: 23px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 40px;
     text-decoration: none;
     font-family: 'Khula', sans-serif;
     font-size: 22px;
     line-height: 40px;
-    letter-spacing: 0.1em;
+    letter-spacing: 0.06em;
     color: #000000;
 }
 
