--- a/css/teacher-adults.css
+++ b/css/teacher-adults.css
@@ -47,7 +47,7 @@ header {
 
 .inner-width {
     float: right;
-    width: 987px;
+    width: 950px;
     height: 64px;
     background: rgba(46, 67, 196, 0.12);
     -webkit-box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.05);
@@ -72,33 +72,33 @@ header {
 }
 
 .navigation-menu{
-    display: inline-block;
-    margin: 14.5px;
+    
+    margin: 13.5px;
+    margin-left: 15px;
 }
 
 .navigation-menu a{
-    position: relative;
-    padding-top: 22px;
-    padding-bottom: 18px;
-    padding-left: 27px;
-    padding-right: 23px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 40px;
     text-decoration: none;
     font-family: 'Khula', sans-serif;
-    font-style: normal;
     font-size: 22px;
     line-height: 40px;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.06em;
     color: #000000;
 }
 
 
 
 .header-text {
-    position: absolute;
-    width: 100%;
-    height: 150px;
-    margin-top: 230px;
-    margin: 230px auto;
+    width: 1100px;
+    height: 100px;
+    padding-top: 230px;
+    margin-left: 21.5%;
+    position: inherit;
+    top: -50%;
     font-family: "Anton", sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -114,7 +114,7 @@ header {
     width: 500px;
     height: 500px;
     position: absolute;
-    margin-top: 500px;
+    margin-top: 200px;
     margin-left: 200px;
 }
 
@@ -128,7 +128,7 @@ header {
     width: 500px;
     height: 500px;
     position: absolute;
-    margin-top: 850px;
+    margin-top: 550px;
     margin-left: 200px;
 }
 
@@ -142,7 +142,7 @@ header {
     width: 500px;
     height: 500px;
     position: absolute;
-    margin-top: 1200px;
+    margin-top: 900px;
     margin-left: 200px;
 }
 
@@ -156,7 +156,7 @@ header {
     width: 500px;
     height: 500px;
     position: absolute;
-    margin-top: 1550px;
+    margin-top: 1250px;
     margin-left: 200px;
 }
 
@@ -170,7 +170,7 @@ header {
     width: 500px;
     height: 500px;
     position: absolute;
-    margin-top: 500px;
+    margin-top: 200px;
     margin-left: 1100px;
 }
 
@@ -184,7 +184,7 @@ header {
     width: 500px;
     height: 500px;
     position: absolute;
-    margin-top: 850px;
+    margin-top: 550px;
     margin-left: 1100px;
 }
 
@@ -199,7 +199,7 @@ header {
     width: 500px;
     height: 500px;
     position: absolute;
-    margin-top: 1200px;
+    margin-top: 900px;
     margin-left: 1100px;
 }
 
@@ -214,10 +214,10 @@ header {
 .prob-les {
     width: 900px;
     height: 350px;
-    position: absolute;
+    position: relative;
     text-align: center;
     float: left;
-    margin-top: 1950px;
+    margin-top: 1700px;
     margin-left: 26.9%;
     background: rgba(29, 41, 115, 0.85);
     border-radius: 40px;
@@ -304,7 +304,7 @@ header {
 
 
 footer {
-    margin-top: 2300px;
+    margin-top: 200px;
     width: 100%;
     height: 300px;
     float: left;
