--- a/css/allcourse-2.css
+++ b/css/allcourse-2.css
@@ -173,10 +173,11 @@ header {
 
 
 .add-text {
-    width: 700px;
+    width: 550px;
     position: absolute;
-    margin-left: 57.5%;
-    margin-top: 1970px;
+    float: left;
+    margin-left: 1100px;
+    margin-top: 1850px;
 }
 
 .add-text > p {
