--- a/css/home-page.css
+++ b/css/home-page.css
@@ -186,7 +186,7 @@ nav > a:hover {
 .img-course-cor {
     margin-top: 440px;
     padding-left: 41%;
-    position: absolute;
+    position: relative
     width: 500px;
     height: 500px;
 }
@@ -195,7 +195,7 @@ nav > a:hover {
     width: 508px;
     height: 50px;
     position: relative;
-    margin-top: 710px;
+    margin-top: -210px;
     padding-left: 150px;
 }
 
